prevented horizontal scroll

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,10 @@ html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%
 }
-
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 body {
     margin: 0;
     padding: 0;
